--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>spa_using_vue</title>
+    <!--移动端视口不能缩放,所以要设置meta标签如下-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+    <link rel="stylesheet" type="text/css" href="static/css/reset.css">
+
   </head>
   <body>
     <div id="app"></div>
