goods page has done

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--移动端视口不能缩放,所以要设置meta标签如下-->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <link rel="stylesheet" type="text/css" href="static/css/reset.css">
-
+	  <link rel="stylesheet" type="text/css" href="./src/common/index.scss">
   </head>
   <body>
     <div id="app"></div>
